<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/Title1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/LightPink"
        android:gravity="center"
        android:text="@string/title1"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/Title2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Title2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/PeachPuff"
        android:gravity="center"
        android:text="@string/calculator_app"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Title1" />

    <EditText
        android:id="@+id/FirstNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="Enter First Number"
        android:hint="@string/enter_first_number"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/SecondNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/SecondNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="Enter Second Number"
        android:gravity="center"
        android:hint="@string/enter_second_number"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@id/middle_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:weightSum="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/middle_guideline"/>


        <Button
            android:id="@+id/SubButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/Salmon"
            android:text="@string/Substraction"
            android:textColor="#6D4C41"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/MultiButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/Salmon"
            android:text="@string/Multiplication"
            android:textColor="@color/Blue"
            android:textSize="20sp" />

        <Button
            android:id="@+id/DivButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/Salmon"
            android:text="@string/Division"
            android:textColor="@color/Blue"
            android:textSize="20sp" />

        <Button
            android:id="@+id/clearButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/Salmon"
            android:text="@string/C"
            android:textColor="@color/Blue"
            android:textSize="20sp" />

        <Button
            android:id="@+id/AddButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/Salmon"
            android:text="@string/Add"
            android:textColor="#6D4C41"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <Button
        android:id="@+id/AddButton1"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Salmon"
        android:text="@string/Add"
        android:textColor="#6D4C41"
        android:textSize="20sp"
      app:layout_constraintTop_toBottomOf="@id/linearLayout"
        app:layout_constraintEnd_toStartOf="@+id/SubButton1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck"

        />

    <Button
        android:id="@+id/SubButton1"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Salmon"
        android:text="@string/Substraction"
        android:textColor="#6D4C41"
        android:textSize="20sp"
      app:layout_constraintTop_toBottomOf="@id/linearLayout"
        app:layout_constraintEnd_toStartOf="@+id/MultiButton1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/AddButton1"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/MultiButton1"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Salmon"
        android:text="@string/Multiplication"
        android:textColor="@color/Blue"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        app:layout_constraintEnd_toStartOf="@+id/DivButton1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/SubButton1" />


    <Button
        android:id="@+id/DivButton1"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Salmon"
        android:text="@string/Division"
        android:textColor="@color/Blue"
        android:textSize="20sp"
  app:layout_constraintTop_toBottomOf="@id/linearLayout"
        app:layout_constraintEnd_toStartOf="@+id/clearButton1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/MultiButton1" />

    <Button
        android:id="@+id/clearButton1"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Salmon"
        android:text="@string/C"
        android:textColor="@color/Blue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintTop_toBottomOf="@id/linearLayout"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@+id/DivButton1"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/resultText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/result_text"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@id/showpreviouscontent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"


        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.756" />

    <Button
        android:id="@+id/showpreviouscontent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_history"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/middle_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.500684" />


</androidx.constraintlayout.widget.ConstraintLayout>



